Fix MsgExecutor check from sync msg
Issue-ID: POLICY-5658
Change-Id: Ie87aa58db6c4a180ff2bb0c3f5f022e1f6cb333c
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>